# rust_cucumber

./: Cargo.toml
src/: lib.rs  main.rs
src/animals/: cat.rs
tests/: cat_test.rs
tests/features/cat/: animal.feature
